Switch CoreDNS to LoaBalancer in local setup
Simplify setup by spawning local clusters with LoadBalancer.

* Drop exposeCoreDNS helm value and rely on coredns.serviceType
* Drop internal coredns svc representation and instruct helm to install
  svc for CoreDNS based on coredns chart values
* adjust documentation

--- a/chart/k8gb/values.yaml
+++ b/chart/k8gb/values.yaml
@@ -21,7 +21,6 @@ k8gb:
     hostnames:
      - "gslb-ns-cloud-example-com-us.example.com"
   reconcileRequeueSeconds: 30
-  exposeCoreDNS: false # Create Service type LoadBalancer to expose CoreDNS
 
 externaldns:
   image: k8s.gcr.io/external-dns/external-dns:v0.7.6
@@ -32,6 +31,7 @@ externaldns:
     runAsNonRoot: true
 
 coredns:
+  serviceType: LoadBalancer
   isClusterService: false
   image:
     repository: absaoss/k8s_crd
@@ -42,6 +42,7 @@ coredns:
   servers:
   - zones:
     - zone: .
+      scheme: dns://
     port: 53
     plugins:
     - name: errors
